# facet-dev

./: CHANGELOG.md  Cargo.toml  README.md  README.md.in
.github/: FUNDING.yml
.github/workflows/: test.yml
hooks/: install.sh  pre-push
src/: footer.md  header.md  main.rs  readme.rs
src/.github/workflows/: test.yml
