[package]
name = "facet-dev"
version = "0.1.1"
edition = "2021"
description = "Internal development utilities for Facet"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]
rust-version = "1.87"
license = "MIT OR Apache-2.0"

[dependencies]
fs-err = "3.1.0"
log = { version = "0.4.27", features = ["std"] }
owo-colors = "4.2.1"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }
