[package]
name = "facet-dev"
version = "0.1.1"
edition = "2024"
description = "Internal development utilities for Facet"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]
rust-version = "1.87"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
cargo_metadata = "0.23.1"
fs-err = "3.2.0"
log = { version = "0.4.29", features = ["std"] }
owo-colors = "4.2.3"
serde_json = "1.0.132"
toml_edit = "0.23"

[dev-dependencies]
